--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,17 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+/* @layer components {
+    .link {
+        @apply cursor-pointer hover:underline active:transform active:scale-90 active:no-underline;
+    }
 
-* {
-  box-sizing: border-box;
-}
+    .button {
+        @apply p-2 text-xs md:text-sm bg-gradient-to-b from-yellow-200 to-yellow-400 border border-yellow-300 rounded-sm hover:from-yellow-300 focus:outline-none focus:ring-1 focus:ring-yellow-500 active:from-yellow-500 active:transform active:scale-90;
+    }
+
+    .growing-hover {
+        @apply transition-transform duration-300 transform origin-bottom scale-100 hover:scale-105;
+    }
+} */
