--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
   }
 
   .button {
-    @apply p-2 text-xs md:text-sm bg-gradient-to-b from-yellow-200 to-yellow-400 border border-yellow-300 rounded-sm hover:from-yellow-300 active:outline-none active:ring-1 active:ring-yellow-500 active:from-yellow-500 active:transform active:scale-90;
+    @apply p-2 text-xs md:text-sm text-white bg-gradient-to-b from-blue-400 to-blue-700 border border-blue-300 rounded-sm hover:from-blue-800 active:outline-none active:ring-1 active:ring-blue-500 active:from-blue-500 active:transform active:scale-90;
   }
 
   .growing-hover {
